fix : change align-items from start to flex-start

--- a/src/components/colorsntypes/colors/colors.scss
+++ b/src/components/colorsntypes/colors/colors.scss
@@ -24,5 +24,5 @@
   font-size: 19px;
   line-height: 29px;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
 }
